--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   },
   "homepage": "https://github.com/lawrenceforsytheiii/twitter-like-api#readme",
   "dependencies": {
+    "@accounts/mongo": "^0.31.1",
     "apollo-server": "^2.22.2",
-    "graphql": "^15.5.0"
+    "graphql": "^15.5.0",
+    "mongoose": "^5.12.3"
   }
 }
