--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "homepage": "https://github.com/lawrenceforsytheiii/twitter-like-api#readme",
   "dependencies": {
     "@accounts/mongo": "^0.31.1",
+    "@accounts/password": "^0.31.1",
+    "@accounts/server": "^0.30.0",
     "apollo-server": "^2.22.2",
     "graphql": "^15.5.0",
     "mongoose": "^5.12.3"
