--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
   },
   "homepage": "https://github.com/lawrenceforsytheiii/twitter-like-api#readme",
   "dependencies": {
+    "@accounts/graphql-api": "^0.31.1",
     "@accounts/mongo": "^0.31.1",
-    "@accounts/password": "^0.31.1",
-    "@accounts/server": "^0.30.0",
+    "@accounts/password": "^0.30.0",
+    "@accounts/server": "^0.19.0",
+    "@graphql-modules/core": "^0.7.17",
+    "@graphql-toolkit/schema-merging": "^0.10.7",
     "apollo-server": "^2.22.2",
     "graphql": "^15.5.0",
     "mongoose": "^5.12.3"
