Move dynamic vars into env vars

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@graphql-modules/core": "^0.7.17",
     "@graphql-toolkit/schema-merging": "^0.10.7",
     "apollo-server": "^2.22.2",
+    "dotenv": "^8.2.0",
     "graphql": "^15.5.0",
     "mongoose": "^5.12.3"
   }
